force-app/main/default/objects/Ticket__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>Attendee__c</referenceTo>
    <relationshipLabel>Ticket</relationshipLabel>
    <relationshipName>Ticket</relationshipName>
    <type>Lookup</type>
</CustomField>