force-app/main/default/objects/Ticket__c/fields/Primary_Attendee_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Primary_Attendee_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Attendee Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Ticket</relationshipLabel>
    <relationshipName>Ticket</relationshipName>
    <type>Lookup</type>
</CustomField>