force-app/main/default/objects/Ticket__c/fields/SubTotal_Amount__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_Amount__c</fullName>
    <label>SubTotal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>