force-app/main/default/objects/Ticket__c/fields/TransactionID__c.field-meta.xml
<CustomField>
    <fullName>TransactionID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TransactionID</label>
    <referenceTo>stripeGC__Stripe_Event__c</referenceTo>
    <relationshipLabel>Ticket</relationshipLabel>
    <relationshipName>Ticket</relationshipName>
    <type>Lookup</type>
</CustomField>