force-app/main/default/objects/Ticket__c/fields/Vat__c.field-meta.xml
<CustomField>
    <fullName>Vat__c</fullName>
    <label>Vat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>