force-app/main/default/objects/Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TransactionID__c</columns>
    <columns>Attendee__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Total_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>